<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tayyipgoren.tensorboard.ConnectFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:ems="10"
            android:hint="@string/ip"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:ems="10"
            android:hint="@string/port"
            android:inputType="number" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_style_2"
            android:contentDescription="@string/connect"
            android:text="@string/connect"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/connect" />

    </LinearLayout>
</FrameLayout>
